--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <br>
 
                 <ol>
-                    <li>1- Matrix</li> 
-                    <li>2- O Conde de Monte Cristo</li> 
-                    <li>3- O Senhro dos Anéis</li> 
+                    <li>Matrix</li> 
+                    <li>O Conde de Monte Cristo</li> 
+                    <li>O Senhro dos Anéis</li> 
                 </ol>
 
                 <br>
